--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -8,10 +8,16 @@ annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
     # via starlette
+build==1.2.2.post1
+    # via pip-tools
 click==8.2.1
-    # via uvicorn
+    # via
+    #   pip-tools
+    #   uvicorn
 colorama==0.4.6
-    # via click
+    # via
+    #   build
+    #   click
 dnspython==2.7.0
     # via pymongo
 fastapi==0.115.13
@@ -20,12 +26,20 @@ h11==0.16.0
     # via uvicorn
 idna==3.10
     # via anyio
+packaging==25.0
+    # via build
+pip-tools==7.4.1
+    # via -r requirements.in
 pydantic==2.11.7
     # via fastapi
 pydantic-core==2.33.2
     # via pydantic
 pymongo==4.13.2
     # via -r requirements.in
+pyproject-hooks==1.2.0
+    # via
+    #   build
+    #   pip-tools
 sniffio==1.3.1
     # via anyio
 starlette==0.46.2
@@ -41,3 +55,9 @@ typing-inspection==0.4.1
     # via pydantic
 uvicorn==0.34.3
     # via -r requirements.in
+wheel==0.45.1
+    # via pip-tools
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
