--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-font",
+          {
+            "fonts": ["node_modules/@expo-google-fonts/poppins/900Black/Poppins_900Black.ttf", "node_modules/@expo-google-fonts/lobster/400Regular/Lobster_400Regular.ttf"]
+          }
       ]
     ],
     "experiments": {
