--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "format": "npx prettier --write .",
+    "check": "npx prettier --check .",
     "prepare": "husky"
   },
   "dependencies": {
