--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "22.16.0"
           cache: "npm"
       - run: npm ci
-      - run: npm run checker
+      - run: npm run check
   lint:
     name: linting
     runs-on: ubuntu-latest
